; ModuleID = '/home/carl/AnghaBench/postgres/src/pl/plperl/extr_plperl.c_hv_store_string.c'
source_filename = "/home/carl/AnghaBench/postgres/src/pl/plperl/extr_plperl.c_hv_store_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dTHX = common dso_local global i32 0, align 4
@PG_UTF8 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32** (i32*, i8*, i32*)* @hv_store_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32** @hv_store_string(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32**, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %10 = load i32, i32* @dTHX, align 4
  %11 = load i8*, i8** %5, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = call i64 @strlen(i8* %12)
  %14 = load i32, i32* @PG_UTF8, align 4
  %15 = call i8* @pg_server_to_any(i8* %11, i64 %13, i32 %14)
  store i8* %15, i8** %8, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = call i64 @strlen(i8* %16)
  %18 = trunc i64 %17 to i32
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %7, align 4
  %20 = load i32*, i32** %4, align 8
  %21 = load i8*, i8** %8, align 8
  %22 = load i32, i32* %7, align 4
  %23 = load i32*, i32** %6, align 8
  %24 = call i32** @hv_store(i32* %20, i8* %21, i32 %22, i32* %23, i32 0)
  store i32** %24, i32*** %9, align 8
  %25 = load i8*, i8** %8, align 8
  %26 = load i8*, i8** %5, align 8
  %27 = icmp ne i8* %25, %26
  br i1 %27, label %28, label %31

28:                                               ; preds = %3
  %29 = load i8*, i8** %8, align 8
  %30 = call i32 @pfree(i8* %29)
  br label %31

31:                                               ; preds = %28, %3
  %32 = load i32**, i32*** %9, align 8
  ret i32** %32
}

declare dso_local i8* @pg_server_to_any(i8*, i64, i32) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32** @hv_store(i32*, i8*, i32, i32*, i32) #1

declare dso_local i32 @pfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
